NONE: alert user before deleting recording. added timing label to recording icon.

--- a/JCOClasses/Resources/de.lproj/Localizable.strings
+++ b/JCOClasses/Resources/de.lproj/Localizable.strings
@@ -8,3 +8,6 @@
 "Always" = "Immer";
 "No" = "Nein";
 "Yes" = "Ja";
+
+"AlertBeforeDeletingRecording" = "Möchten Sie dies Aufnahme löschen?";
+"RemoveRecording" = "Aufnahme Löschen";
