--- a/JCOClasses/Resources/de.lproj/Localizable.strings
+++ b/JCOClasses/Resources/de.lproj/Localizable.strings
@@ -5,6 +5,9 @@
 /* Title showing in the alert box when crash report data has been found */
 "CrashDataFoundTitle" = "Crash-Bericht";
 
+/* Thank you message on successful feedback submission */
+"JCOFeedbackReceived" = "Your feedback has been received. Thank you for helping us improve %@.";
+
 "Always" = "Immer";
 "No" = "Nein";
 "Yes" = "Ja";
