--- a/JCOClasses/Resources/de.lproj/JCOLocalizable.strings
+++ b/JCOClasses/Resources/de.lproj/JCOLocalizable.strings
@@ -14,3 +14,6 @@
 
 "AlertBeforeDeletingRecording" = "Möchten Sie dies Aufnahme löschen?";
 "RemoveRecording" = "Aufnahme Löschen";
+
+/** Title of 'Inbox' view **/
+"Your Feedback" = "Dein Feedback";
