CONNECT-39: if the device doesn't support the AAC audio format, then show an alert to the user that Audio is not supported.

--- a/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
+++ b/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
@@ -17,3 +17,7 @@
 
 /** Title of 'Inbox' view **/
 "Your Feedback" = "Dein Feedback";
+
+/** Alert View when Voice is not supported **/
+"Voice Recording" = "Tonaufnahme";
+"JMCVoiceRecordingNotSupported" = "Nicht unterstützt auf diesen Gerät. Bitte Text eingeben.";
