--- a/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
+++ b/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
@@ -6,7 +6,8 @@
 "CrashDataFoundTitle" = "Crash-Bericht";
 
 /* Thank you message on successful feedback submission */
-"JMCFeedbackReceived" = "Your feedback has been received. Thank you for helping us improve %@.";
+"JMCFeedbackReceived" = "Vielen Dank für Ihr Feedback und Hilfe %@ zu verbessern.";
+
 
 "Always" = "Immer";
 "No" = "Nein";
