CONNECT-66: showing the notsent icon only when truly notsent. Alerting users when they try to reply to an issue still in transit.
--HG--
branch : CONNECT-66-sent-unsent-statuses

--- a/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
+++ b/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
@@ -21,3 +21,9 @@
 /** Alert View when Voice is not supported **/
 "Voice Recording" = "Tonaufnahme";
 "JMCVoiceRecordingNotSupported" = "Nicht unterstützt auf diesen Gerät. Bitte Text eingeben.";
+
+/** Alert title when message not arrived in JIRA **/
+"Message Pending" = "Nachricht Unterwegs";
+
+/** Alert when create issue request not yet successful **/
+"JMCRequestPendingMessage" = "Diese Nachricth wurde noch nicht gesendet. Bitte probieren Sie gleich noch mal.";
