CONNECT: allow all DEBUG logging to be disabled for production builds. JMCDLog() macro added for this. When a comment or feedback is attachments only, don't show an empty text

--- a/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
+++ b/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
@@ -11,6 +11,8 @@
 "Always" = "Immer";
 "No" = "Nein";
 "Yes" = "Ja";
+"No Comment" = "(Keine Kommentar)";
+"No Description" = "(Kein Text)";
 
 "AlertBeforeDeletingRecording" = "Möchten Sie dies Aufnahme löschen?";
 "RemoveRecording" = "Aufnahme Löschen";
