Added attachments button to JMCViewController with stacked thumbnails (last 3 thumbnails). Added JMCAttachmentsViewController to manage attachments (tap to edit, swipe to delete).

--- a/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
+++ b/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
@@ -42,3 +42,8 @@
 
 "JMCInAppNotification-Singular" = "%d neue Nachricht von Entwickler";
 "JMCInAppNotification-Plural" = "%d neue Nachrichten von Entwickler";
+
+"JMCAttachmentsTitle" = "Anhänge";
+"JMCRecordingLabel" = "Tonaufnahme";
+"JMCImageLabel" = "Bild";
+"JMCCustomerLabel" = "Sonstiges";
