--- a/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
+++ b/JIRAConnect/JMCClasses/Resources/de.lproj/JMCLocalizable.strings
@@ -14,6 +14,10 @@
 "Always" = "Immer";
 "No" = "Nein";
 "Yes" = "Ja";
+"Send" = "Senden";
+"Reply" = "Antworten";
+"Cancel" = "Abbrechen";
+"Close" = "Schließen";
 "No Comment" = "(Kein Kommentar)";
 "No Description" = "(Kein Text)";
 
@@ -47,3 +51,4 @@
 "JMCRecordingLabel" = "Tonaufnahme";
 "JMCImageLabel" = "Bild";
 "JMCCustomerLabel" = "Sonstiges";
+
